crates/test-files/fixtures/compile_errors/ctx_undefined_create.fe
contract Bar:
    pass

contract Foo:
    pub fn baz():
        Bar.create(0)